--- a/style.css
+++ b/style.css
@@ -2,66 +2,122 @@ body {
     background-color: #232931;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     margin: 0;
+    padding: 0;
     box-sizing: border-box;
 }
 
-h1 {
-    text-align: center;
-    color: #eee;
-}
 
 h2 {
     text-align: center;
     color: #eee;
 }
 
-
-.nav-list {
-    list-style-type: none;
-    margin: 0;
-    padding: 0;
-    overflow: hidden;
+.hero-logo {
+    position: relative;
+    width: 100%;
+    height: 5vh;
     background-color: #232931;
-    margin-top: 15px;
 }
 
-.nav-list li {
+
+.logo {
+    width: 100px;
+}
+
+
+  
+  .topnav a {
+    font-weight: bold;
     float: right;
-}
-
-li a {
-    display: block;
-    color: aquamarine;
+    display: flex;
+    color: #4ECCA3;
+    margin-right: 75px;
+    align-items: center;
     text-align: center;
-    padding: 14px 16px;
+    padding: 20px 25px;
     text-decoration: none;
-    font-size: 20px;
+    font-size: 25px;
+  }
+  
+  .topnav a:hover {
+    text-decoration: underline;
+    color: #eee;
+  }
+  
+
+  .topnav .icon {
+    display: none;
+  }
+  
+  
+
+.hero {
+    margin-left: 10%;
+    margin-top: 13%;
 }
 
-.hero-img-box {
-    width: 200px; 
-    height: 200px; 
-    overflow: hidden; 
-    border-radius: 50%; 
-    margin-left: auto;
-    margin-right: auto;
-    display: block;
+.hero h1 {
+    font-size: 50px;
+    margin-bottom: 20px;
+    color: #eee;    
 }
-    
-    .hero-img { 
-     width: 100%; 
-     height: auto; 
-     background-color: #4ECCA3;
-    
-    }
-.about-me {
-    text-align: center;
+span {
+color: #4ECCA3;
+}
+
+.hero p {
+    color: #eee;
+    line-height: 22px;
+}
+
+.hero a {
+    background-color: #4ECCA3;
+    padding: 10px 18px;
+    text-decoration: none;
+    font-weight: bold;
+    color: #232931;
+    display: inline-block;
+    margin: 30px 0;
+    border-radius: 15px;
+}
+
+.hero a:hover {
     background-color: #eee;
     color: #232931;
+}
+
+
+.images {
+    margin-bottom: 170px;
+    height: 60%;
+    width: 55%;
+    position: absolute;
+    bottom: 0;
+    right: 100px;
+}
+
+
+
+ .images img   {
+   height: 100%;
+    position: absolute;
+    left: 50%;
+    bottom: 0;
+    transform: translateX(-50%);
+    transition: bottom 1s, left 1s;
+}
+
+
+
+
+.about-me {
+    text-align: center;
+  
+    color: #eee;
     
 }
 .about-me h2 {
-    color: #232931;
+    color: #eee;
 }
 
 
@@ -99,4 +155,69 @@ footer {
 }
 
 
-
+/* Media Queries */ 
+@media screen and (max-width: 600px) {
+    .topnav a:not(:first-child) {display: none;}
+    .topnav a.icon {
+      float: right;
+      margin-right: -2.5px;
+      display: block;
+    }
+  }
+  @media screen and (max-width: 390px) {
+    .topnav a:not(:first-child) {display: none;}
+    .topnav a.icon {
+        float: right;
+        margin-right: -2.5px;
+        font-size: 35px;
+        margin-top: 15px;
+        display: block;
+      }
+        .images img {
+          width: 100%;
+          height: auto;
+          margin-bottom: 25vh;
+          margin-left: auto;
+        }
+        .hero a {
+            opacity: 0;
+            margin-top: 3rem;
+            
+        }
+      }
+  @media screen and (max-width: 428px) {
+    .topnav a:not(:first-child) {display: none;}
+    .topnav a.icon {
+      float: right;
+      margin-right: -2.5px;
+      font-size: 35px;
+      margin-top: 15px;
+      display: block;
+    }
+      .images img {
+        width: 100%;
+        height: auto;
+        margin-bottom: 25vh;
+        margin-left: auto;
+      }
+      .hero a {
+          opacity: 0;
+          margin-top: 3rem;
+          
+      }
+    }
+  
+  
+  @media screen and (max-width: 600px) {
+    .topnav.responsive {position: relative;}
+    .topnav.responsive .icon {
+      position: absolute;
+      right: 0;
+      top: 0;
+    }
+    .topnav.responsive a {
+      float: none;
+      display: block;
+      text-align: left;
+    }
+  }
