--- a/style.css
+++ b/style.css
@@ -10,6 +10,12 @@ body {
 h2 {
     text-align: center;
     color: #eee;
+    font-size: 30px;
+}
+h2:hover {
+    color: #4ECCA3;
+   
+    cursor: pointer;
 }
 
 .hero-logo {
@@ -104,10 +110,10 @@ color: #4ECCA3;
     left: 50%;
     bottom: 0;
     transform: translateX(-50%);
-    transition: bottom 1s, left 1s;
+   
 }
 
-
+/* About Me Sektion */ 
 
 
 .about-me {
@@ -120,21 +126,96 @@ color: #4ECCA3;
     color: #eee;
 }
 
+/* Skillset Sektion */ 
 
-.project {
-   
-    background-color: #232931;
+.column {
+    float: left;
+    width: 25%;
+    padding: 0 10px;
+    margin-left: 5%;
+}
+
+.row {
+    margin: 0 -5px;
+}
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+
+.card {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    padding: 16px;
+    text-align: center;
+    background-color: #4ECCA3;
+    border-radius: 15px;
+}
+.card:hover {
+    background-color: #eee;
+    cursor: pointer;
+}
+/* Project Sektion */ 
+
+.column-project {
+    width: 100%;
+    padding: 0 10px;
     color: #eee;
+}
+
+.row-project {
+    margin: 0 -5px;
+}
+
+.row-project:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+.card-project {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    padding: 16px;
+    height: 300px;
+   
+   
+   
+}
+
+.getQuote {
+    width: 25%;
+   height: auto;
+    float: left;
+    border-radius: 15px;
+    margin-right: 25px;
+}
+
+.github-link {
+    background-color: #4ECCA3;
+    padding: 10px 18px;
+    text-decoration: none;
+    font-weight: bold;
+    color: #232931;
+    display:inline-block;
+    margin: 30px 0;
+    border-radius: 15px;
+}
+.gh-link {
+    width: 50px;
+    float: left;
+    margin-right: 10px;
+    height: 50px;
+}
+
+.card-project-1 {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    padding: 16px;
+    height: 300px;
     text-align: center;
    
+   
+   
 }
-
-.project h2 {
-    background-color: #232931;
-    color: #eee;
-    
-}
-
 
 p {
     font-size: 20px;
@@ -145,6 +226,15 @@ p {
 
 .owner-footer {
     color: #4ECCA3;
+}
+
+ a .social {
+    width: 75px;
+    height: 75px;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #4ECCA3;
+    border-radius: 15px;border: 2px solid #4ECCA3;
 }
 
 
@@ -198,7 +288,7 @@ footer {
    
       .images img {
           width: 75%;
-       height: auto;
+        height: auto;
         margin-bottom: 10vh;
         margin-left: auto;
       }
@@ -207,7 +297,29 @@ footer {
           margin-top: 3rem;
           
       }
-    }
+    } @media screen and (max-width: 600px) 
+    {
+        .topnav a:not(:first-child) {display: none;}
+        .topnav a.icon {
+          float: right;
+          margin-right: -2.5px;
+          font-size: 35px;
+          margin-top: 15px;
+          display: block;
+        }
+       
+          .images img {
+            width: 75%;
+           height: auto;
+            margin-bottom: 10vh;
+            margin-left: auto;
+          }
+          .hero a {
+              opacity: 0;
+              margin-top: 3rem;
+              
+          }
+        }
   
   
   @media screen and (max-width: 600px) {
@@ -223,3 +335,35 @@ footer {
       text-align: left;
     }
   }
+
+  @media screen and (max-width: 600px) {
+      .column {
+          width: 100%;
+          display: block;
+          margin-bottom: 20px;
+          margin-left: -1.5%;
+      }
+  }
+
+  @media screen and (max-width: 600px) {
+    .column-project {
+        width: 100%;
+        display: block;
+        margin-bottom: 20px;
+        margin-left: -1.5%;
+    }
+    .getQuote {
+        width: 100%;
+        margin-bottom: 20px;
+    
+    }
+    .card-project {
+        text-align: center;
+        height: auto;
+    }
+  
+    .card-project-1 {
+        margin-top: 15%;
+        height: auto;
+    }
+}
