--- a/style.css
+++ b/style.css
@@ -344,8 +344,39 @@ footer {
           margin-left: -1.5%;
       }
   }
+  @media screen and (max-width: 360px) {
+    .column {
+        width: 95%;
+        display: block;
+        margin-bottom: 20px;
+        margin-left: 0.25px;
+       
+    }
+}
 
   @media screen and (max-width: 600px) {
+    .column-project {
+        width: 100%;
+        display: block;
+        margin-bottom: 20px;
+        margin-left: -1.5%;
+    }
+    .getQuote {
+        width: 100%;
+        margin-bottom: 20px;
+    
+    }
+    .card-project {
+        text-align: center;
+        height: auto;
+    }
+  
+    .card-project-1 {
+        margin-top: 15%;
+        height: auto;
+    }
+}
+@media screen and (max-width: 360px) {
     .column-project {
         width: 100%;
         display: block;
