--- a/style.css
+++ b/style.css
@@ -18,48 +18,94 @@ h2:hover {
     cursor: pointer;
 }
 
-.hero-logo {
-    position: relative;
-    width: 100%;
-    height: 5vh;
+
+.navbar {
     background-color: #232931;
-}
-
-
-.logo {
-    width: 100px;
-}
-
-
-  
-  .topnav a {
-    font-weight: bold;
-    float: right;
-    display: flex;
     color: #4ECCA3;
-    margin-right: 75px;
+    display: flex;
+    justify-content:space-around;
     align-items: center;
-    text-align: center;
-    padding: 20px 25px;
-    text-decoration: none;
     font-size: 25px;
-  }
-  
-  .topnav a:hover {
+    
+}
+
+.nav-list {
+    list-style-type: none;
+    width: 100%;
+    text-align: center;
+    padding-top: 10px;
+    display: none;
+
+}
+
+.nav-list .list-item {
+    display: inline-block;
+    padding: 10px;
+    border: 1px solid white;
+}
+
+.navbar a {
+    color: #4ECCA3;
+    text-decoration: none;
+}
+
+.navbar a:hover {
     text-decoration: underline;
     color: #eee;
-  }
-  
+}
 
-  .topnav .icon {
-    display: none;
-  }
-  
-  
 
+  .logo {
+      width: 200px;
+  }
+
+  .logo-div {
+      width: 100%;
+      margin-left: 10px;
+      margin-top: 10px;
+    }
+
+  .menu {
+     display: none;
+      margin-top: 85px;
+  }
+
+  .menu-line {
+      width: 20px;
+      height: 3px;
+      background-color: #4ECCA3;
+      margin-bottom: 4px;
+  }
+
+  .active {
+      display: block;
+  }
+  @media screen and (max-width: 480px) {
+      .navbar {
+          flex-direction: column;
+      }
+      .menu {
+          display: block;
+          position: absolute;
+          right: 15px;
+          top: 15px;
+      }
+  }
+  @media screen and (min-width: 481px) and (max-width: 600px) {
+    .navbar {
+        flex-direction: column;
+    }
+    .menu {
+        display: block;
+        position: absolute;
+        right: 15px;
+        top: 15px;
+    }
+}
+ 
 .hero {
     margin-left: 10%;
-    margin-top: 13%;
+    margin-top: 5%;
 }
 
 .hero h1 {
@@ -118,12 +164,32 @@ color: #4ECCA3;
 
 .about-me {
     text-align: center;
-  
+    width: 100%;
+    padding: 0 10px;
     color: #eee;
-    
 }
+
+  
+    
+
 .about-me h2 {
     color: #eee;
+}
+
+.row {
+    margin: 0 -5px;
+}
+
+.row:after {
+    content: "";
+    display: table;
+    clear: both;
+}
+.card-about-me {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    padding: 16px;
+    height: auto;
+   margin-top: 75px;
 }
 
 /* Skillset Sektion */ 
@@ -297,6 +363,31 @@ footer {
           margin-top: 3rem;
           
       }
+    }
+      @media screen and (max-width: 428px) 
+{
+    .topnav a:not(:first-child) {display: none;}
+    .topnav a.icon {
+      float: right;
+      margin-right: -2.5px;
+      font-size: 35px;
+      margin-top: 15px;
+      display: block;
+    }
+   
+      .images img {
+          width: 75%;
+        height: auto;
+        margin-bottom: 10vh;
+        margin-left: auto;
+      }
+      .hero a {
+          opacity: 0;
+          margin-top: 3rem;
+      }
+    
+
+
     } @media screen and (max-width: 600px) 
     {
         .topnav a:not(:first-child) {display: none;}
