--- a/style.css
+++ b/style.css
@@ -154,7 +154,8 @@ color: #4ECCA3;
    height: 100%;
     position: absolute;
     left: 50%;
-    bottom: 0;
+    top: 85%;
+    
     transform: translateX(-50%);
    
 }
@@ -217,6 +218,7 @@ color: #4ECCA3;
     text-align: center;
     background-color: #4ECCA3;
     border-radius: 15px;
+   
 }
 .card:hover {
     background-color: #eee;
@@ -312,23 +314,9 @@ footer {
 
 
 /* Media Queries */ 
-@media screen and (max-width: 600px) {
-    .topnav a:not(:first-child) {display: none;}
-    .topnav a.icon {
-      float: right;
-      margin-right: -2.5px;
-      display: block;
-    }
-  }
+
   @media screen and (max-width: 390px) {
-    .topnav a:not(:first-child) {display: none;}
-    .topnav a.icon {
-        float: right;
-        margin-right: -2.5px;
-        font-size: 35px;
-        margin-top: 15px;
-        display: block;
-      }
+  
         .images img {
           width: 100%;
           height: auto;
@@ -343,8 +331,6 @@ footer {
       }
   @media screen and (max-width: 480px) 
 {
-   
-   
       .images img {
           width: 75%;
         height: auto;
@@ -357,10 +343,8 @@ footer {
           
       }
     }
-      @media screen and (max-width: 428px) 
+      @media only screen and (max-width: 428px) 
 {
-    
-   
       .images img {
           width: 75%;
         height: auto;
@@ -371,19 +355,16 @@ footer {
           opacity: 0;
           margin-top: 3rem;
       }
+
+      .card {
+          width: 90%;
+      }
     
+     
 
-
-    } @media screen and (max-width: 600px) 
+    } @media only screen and (max-width: 600px) 
     {
-        .topnav a:not(:first-child) {display: none;}
-        .topnav a.icon {
-          float: right;
-          margin-right: -2.5px;
-          font-size: 35px;
-          margin-top: 15px;
-          display: block;
-        }
+       
        
           .images img {
             width: 75%;
@@ -399,19 +380,7 @@ footer {
         }
   
   
-  @media screen and (max-width: 600px) {
-    .topnav.responsive {position: relative;}
-    .topnav.responsive .icon {
-      position: absolute;
-      right: 0;
-      top: 0;
-    }
-    .topnav.responsive a {
-      float: none;
-      display: block;
-      text-align: left;
-    }
-  }
+   
 
   @media screen and (max-width: 600px) {
       .column {
