--- a/style.css
+++ b/style.css
@@ -61,7 +61,7 @@ h2:hover {
 
   .logo-div {
       width: 100%;
-      margin-left: 10px;
+      margin-left: 100px;
       margin-top: 10px;
     }
 
@@ -89,6 +89,11 @@ h2:hover {
           position: absolute;
           right: 15px;
           top: 15px;
+      }
+      .logo-div {
+        width: 100%;
+        margin-left: 5px;
+        margin-top: 10px;
       }
   }
   @media screen and (min-width: 481px) and (max-width: 600px) {
@@ -359,7 +364,7 @@ footer {
       .card {
           width: 90%;
       }
-    
+      
      
 
     } @media only screen and (max-width: 600px) 
