--- a/style.css
+++ b/style.css
@@ -1,3 +1,11 @@
+
+
+    .light-theme {
+       background-color: #eee;
+      
+       
+    }
+
 body {
     background-color: #232931;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -9,76 +17,58 @@ body {
 
 h2 {
     text-align: center;
-    color: #eee;
+   color: #000;
     font-size: 30px;
 }
 h2:hover {
-    color: #4ECCA3;
+    color:#43CCA3;
    
     cursor: pointer;
 }
 
 
-.navbar {
+nav {
     background-color: #232931;
-    color: #4ECCA3;
+    color: #000;
     display: flex;
     justify-content:space-around;
     align-items: center;
-    font-size: 25px;
+    
     
 }
-
-.nav-list {
-    list-style-type: none;
-    width: 100%;
-    text-align: center;
-    padding-top: 10px;
-    display: none;
-
-}
-
-.nav-list .list-item {
+nav ul li {
     display: inline-block;
-    padding: 10px;
+    list-style: none;
+    margin: 10px 30px;
 }
-
-.navbar a {
-    color: #4ECCA3;
+nav ul {
+    flex: 1;
+    text-align: right;
+}
+nav ul li a {
+    color:#43CCA3;
     text-decoration: none;
+    font-size: 25px;
+    font-weight: bold;
 }
 
-.navbar a:hover {
-    text-decoration: underline;
-    color: #eee;
+nav ul li a:hover{
+   color: #eee;
 }
+.logo {
+    width: 50px;
+    margin-left: 25px;
 
-
-  .logo {
-      width: 200px;
+}
+  #moon-icon {
+      width: 30px;
+      cursor: pointer;
+      margin-top: 5px;
+      margin-right: 15px;
   }
 
-  .logo-div {
-      width: 100%;
-      margin-left: 100px;
-      margin-top: 10px;
-    }
 
-  .menu {
-     display: none;
-      margin-top: 85px;
-  }
 
-  .menu-line {
-      width: 20px;
-      height: 3px;
-      background-color: #4ECCA3;
-      margin-bottom: 4px;
-  }
-
-  .active {
-      display: block;
-  }
   @media screen and (max-width: 480px) {
       .navbar {
           flex-direction: column;
@@ -107,39 +97,39 @@ h2:hover {
     }
 }
  
-.hero {
+.hero-me {
     margin-left: 10%;
     margin-top: 5%;
 }
 
-.hero h1 {
+.hero-me h1 {
     font-size: 50px;
     margin-bottom: 20px;
-    color: #eee;    
+   color: #000;
 }
 span {
-color: #4ECCA3;
+    color:#43CCA3;
 }
 
-.hero p {
-    color: #eee;
+.hero-me p {
+  color: #000;
     line-height: 22px;
 }
 
-.hero a {
-    background-color: #4ECCA3;
+.hero-me a {
+    background-color: rgb(0, 0, 0);
     padding: 10px 18px;
     text-decoration: none;
     font-weight: bold;
-    color: #232931;
+    color: #43CCA3;
     display: inline-block;
     margin: 30px 0;
     border-radius: 15px;
 }
 
-.hero a:hover {
-    background-color: #eee;
-    color: #232931;
+.hero-me a:hover {
+    background-color:  #000;;
+    color:#43CCA3;
 }
 
 
@@ -171,14 +161,14 @@ color: #4ECCA3;
     text-align: center;
     width: 100%;
     padding: 0 10px;
-    color: #eee;
+    color:#000000;
 }
 
   
     
 
 .about-me h2 {
-    color: #eee;
+    color:#43CCA3;
 }
 
 .row {
@@ -220,22 +210,25 @@ color: #4ECCA3;
     box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
     padding: 16px;
     text-align: center;
-    background-color: #4ECCA3;
+    background-color: #000;
     border-radius: 15px;
    
 }
 .card:hover {
-    background-color: #eee;
+    background-color: #ffffff;
     cursor: pointer;
+}
+
+.card h3 {
+    color: #43CCA3;
 }
 /* Project Sektion */ 
 
 .column-project {
     width: 100%;
     padding: 0 10px;
-    color: #eee;
+    color:#000000;
 }
-
 .row-project {
     margin: 0 -5px;
 }
@@ -263,14 +256,17 @@ color: #4ECCA3;
 }
 
 .github-link {
-    background-color: #4ECCA3;
+    background-color: #000;
     padding: 10px 18px;
     text-decoration: none;
     font-weight: bold;
-    color: #232931;
+    color:#43CCA3;
     display:inline-block;
     margin: 30px 0;
     border-radius: 15px;
+}
+.github-link:hover {
+    background-color: #eee;
 }
 .gh-link {
     width: 50px;
@@ -297,7 +293,7 @@ p {
 
 
 .owner-footer {
-    color: #4ECCA3;
+    color:#43CCA3;
 }
 
  a .social {
@@ -305,15 +301,15 @@ p {
     height: 75px;
     margin-left: auto;
     margin-right: auto;
-    background-color: #4ECCA3;
-    border-radius: 15px;border: 2px solid #4ECCA3;
+    background-color: #43CCA3;
+    border-radius: 15px;border: 2px solid #43CCA3;
 }
 
 
 footer {
-    background-color: #232931;
+    background-color: var(--primary-color);
     text-align: center;
-    color:#eee;
+    color:#000000;
 }
 
 
@@ -327,7 +323,7 @@ footer {
           margin-bottom: 13vh;
           margin-left: auto;
         }
-        .hero a {
+        .hero-me a {
             opacity: 0;
             margin-top: 3rem;
             
@@ -341,7 +337,7 @@ footer {
         margin-bottom: 10vh;
         margin-left: auto;
       }
-      .hero a {
+      .hero-me a {
           opacity: 0;
           margin-top: 3rem;
           
@@ -356,7 +352,7 @@ footer {
         margin-left: auto;
         top: 80%;
       }
-      .hero a {
+      .hero-me a {
           opacity: 0;
           margin-top: 3rem;
       }
@@ -377,7 +373,7 @@ footer {
             margin-bottom: 10vh;
             margin-left: auto;
           }
-          .hero a {
+          .hero-me a {
               opacity: 0;
               margin-top: 3rem;
               
