--- a/style.css
+++ b/style.css
@@ -221,6 +221,70 @@ line-height: 22px;
    margin-top: 75px;
 }
 
+.skills {
+    width: 90%;
+    max-width: 600px;
+    padding: 0 20px;
+}
+
+.skill-name {
+    font-size: 18px;
+    font-weight: 700;
+    color: #030303;
+    text-transform: uppercase;
+    margin: 39px 0;
+}
+
+.skill-bar {
+    height: 14px;
+    background: #737f8f;
+    border-radius: 3px;
+}
+
+.skill-per {
+    height: 14px;
+    background: #43CCA3;
+    border-radius: 3px;
+    position: relative;
+    animation: fillBars 2.5s 1;
+}
+
+.skill-per::before {
+    content: attr(per);
+    position: absolute;
+    padding: 2px 8px;
+    background: #ffffff;
+    border-radius: 4px;
+    font-size: 12px;
+    top: -35px;
+    right: 0;
+    transform: translateX(50%);
+}
+
+
+.skill-per::after {
+    content: "";
+    position: absolute;
+    width: 10px;
+    height: 10px;
+    background: #ffffff;
+    top: -20px;
+    right: 0;
+    transform: translateX(50%) rotate(45deg);
+    border-radius: 2px;
+}
+@keyframes fillBars {
+    from {
+        width: 0;
+    }
+    to {
+        width: 100%;
+    }
+}
+
+
+
+
 /* Skillset Sektion */ 
 
 .column {
